# stable-diffusion-qrcode

./: .gitignore  README.md  demo_sdqrcode_diffusers_latest.ipynb  diffusers_qrcode_test_multicontrolnet_guidance_start_end.ipynb  post_install.py  pyproject.toml  pyproject.toml.bak  requirements.txt  sdqrcode.py
.github/workflows/: publish-pre-release.yml  publish-release.yml
colabs/: automatic_engine.ipynb  demo.ipynb  demo_sdqrcode.ipynb  demo_sdqrcode_auto.ipynb  demo_sdqrcode_diffusers.ipynb  diffusers_qrcode_test_multicontrolnet_guidance_start_end.ipynb  scratch.ipynb  sdqrcode
colabs/configs/: default.yaml
configs/: custom.yaml  default.yaml  exemple.yaml
src/sdqrcode/: __init__.py  sdqrcode.py
src/sdqrcode/Engines/: AutoEngine.py  DiffusersEngine.py  Engine.py  engine_util.py
src/sdqrcode/configs/: brightness_auto.yaml  brightness_diffusers.yaml  default.yaml  default_auto.yaml  default_diffusers.yaml  img2img_tile_auto.yaml  img2img_tile_diffusers.yaml
tests/: colab_test_sdqrcode_diffusers.ipynb  test_engine_auto.py  test_generate_sd_qrcode.py  test_generate_sd_qrcode_auto copy.py  test_generate_sd_qrcode_auto.py  test_generate_sd_qrcode_auto_diffusers.py  test_generate_sd_qrcode_diffusers.py  test_get_config.py  test_import.py  test_qr_code.py
tests/test_configs/: default_diffusers.yaml
