[tool.poetry]
name = "sdqrcode"
version = "0.3.3"
description = "Generate ai qr codes with stable diffusion and controlnet with standardised methods"
authors = ["PhilSad <philippe.henri.saade@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
webuiapi = "^0.9.3"
qrcode  = "^7.4.1"
transformers = "4.30.0"
accelerate = "^0.20.0"
PyYAML = "^6.0"
xformers = "^0.0.20"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
