[tool.poetry]
name = "sdqrcode"
version = "0.3.8"
description = "Generate ai qr codes with stable diffusion and controlnet with standardised methods"
authors = ["PhilSad <philippe.henri.saade@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
webuiapi = "^0.9.3"
qrcode  = "^7.4.1"
PyYAML = "^6.0" 
xformers = {version = "0.0.20", optional = true}
transformers = {version = "4.30.0", optional = true}
accelerate = {version = "0.20.0", optional = true}

[tool.poetry.extras]
diffusers = ["xformers", "transformers", "accelerate"]



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
